--- a/my_spectral_config/spectral.yaml
+++ b/my_spectral_config/spectral.yaml
@@ -83,10 +83,10 @@ projects:
             roots:
             - rules      # folder(s) relative to this file
             # cherry-pick rules for these roots
-            # include:
-            #    tags:
-            #    - node
-            #    ids: []
+            include:
+              tags:
+                - base
+              ids: ['CLD001']
             # exclude:
             #    tags:
             #    - node
